--- a/ashokitui/src/login/LogIn.css
+++ b/ashokitui/src/login/LogIn.css
@@ -53,3 +53,19 @@
     padding: 20px;
     color: white;
 }
+
+.loginform form input{
+    padding: 5px;
+    font-size: 20px;
+}
+
+#submit{
+    background: rgb(72, 184, 89);
+    border-radius: 10px;
+}
+
+#submit:hover{
+    background: orange;
+}
+
+
