--- a/ashokitui/src/signup/SignUp.css
+++ b/ashokitui/src/signup/SignUp.css
@@ -9,7 +9,7 @@
     margin-top: 30px;
     width: 500px;
     height: 500px;
-    background: red;
+    background: grey;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,5 +17,20 @@
 
 .signupform form{
     text-align: center;
-    font-size: 20px
+    font-size: 10px;
+
+}
+
+.signupform form input{
+    padding: 10px;
+    font-size: 20px;
+}
+
+#submit{
+    background: rgb(72, 184, 89);
+    border-radius: 10px;
+}
+
+#submit:hover{
+    background: orange;
 }
