--- a/ashokitui/src/components/footer/Footer.css
+++ b/ashokitui/src/components/footer/Footer.css
@@ -17,6 +17,7 @@
     margin-right: auto;
     margin-left: auto;
     border-bottom: 1px solid rgba(255, 255, 255, .15);
+    font-size: 20px;
 }
 
 .row1-col{
@@ -26,8 +27,8 @@
 .col1{
     display: flex;
     flex-direction: column;
-    width: 200px;
-    justify-content: space-between;
+    width: 300px;
+    justify-content: space-around;
     
 }
 
